--- a/src/main/resources/web/vehicle/query.html
+++ b/src/main/resources/web/vehicle/query.html
@@ -46,6 +46,7 @@
                     ,{field:'colour', title:'颜色'}
                     ,{field:'exhaust', title:'排量'}
                     ,{field:'cubicles', title:'厢数'}
+                    ,{field:'type', title:'类型'}
                     ,{field:'vin', title:'VIN码', edit: 'text', width:100}
                     ,{field:'rent', title:'租金'}
                     ,{field:'firstLicense', title:'首次上牌时间', width:120, templet: function(res){
