--- a/src/main/resources/web/vehicle/edit.html
+++ b/src/main/resources/web/vehicle/edit.html
@@ -74,11 +74,23 @@
                     <input type="text" name="rent" th:value="${obj.rent}" required lay-verify="rent" placeholder="请输入租金" autocomplete="off" class="layui-input">
                 </div>
             </div>
-            <div class="layui-form-item">
+            <!--<div class="layui-form-item">
                 <label class="layui-form-label">类别</label>
                 <div class="layui-input-block">
                     <input type="radio" name="type" value="1" title="普通" th:field="*{obj.type}" checked>
                     <input type="radio" name="type" value="2" title="豪华" th:field="*{obj.type}">
+                </div>
+            </div>-->
+
+            <div class="layui-form-item">
+                <label class="layui-form-label">类别</label>
+                <div class="layui-input-block">
+                    <select name="type" lay-filter="type">
+                        <option value="" th:field="*{obj.type}"></option>
+                        <option value="轿车" th:field="*{obj.type}">轿车</option>
+                        <option value="SUV" th:field="*{obj.type}">SUV</option>
+                        <option value="MPV" th:field="*{obj.type}">MPV</option>
+                    </select>
                 </div>
             </div>
             <!--<div class="layui-form-item">
@@ -117,19 +129,13 @@
         var form = layui.form;
         var laydate = layui.laydate;
         var upload = layui.upload;
-
         var uploadInst = upload.render({
             elem: '#uploadImg' //绑定元素
             ,url: [[@{/upload/uploadImg}]] //上传接口
             ,done: function(res){
-                console.log("-------------img-------------"+res.msg);
                 $("#vehicleImg").attr("src",[[@{/uploaded/}]]+res.msg);
                 $(" input[ name='imgPath' ] ").val(res.msg);
 
-            }
-            ,error: function(){
-                //请求异常回调
-                console.log("-------------error-------------");
             }
         });
 
