--- a/src/main/resources/web/ylt/about.html
+++ b/src/main/resources/web/ylt/about.html
@@ -89,7 +89,7 @@
 							<a class="nav-link" href="services.html">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="booking.html">Booking</a>
+							<a class="nav-link" href="lease.html">Booking</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
@@ -298,7 +298,7 @@
 	<div class="booking text-center p-sm-5 py-5 px-3">
 		<h3>Book your taxi Cab Now</h3>
 		<p class="my-4">Vestibulum vitae libero consectetur, orn areeros id, congue metus. Aliquam erat volutpat. Donec rhoncus risus vitae ullam corper pretium. Duis vitae nisl neque. Aliquam tincidunt. </p>
-		<a href="booking.html">Book Now</a>
+		<a href="lease.html">Book Now</a>
 	</div>
 </section>
 <!-- booking -->
