--- a/src/main/resources/web/ylt/contact.html
+++ b/src/main/resources/web/ylt/contact.html
@@ -89,7 +89,7 @@
 							<a class="nav-link" href="services.html">Services</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="booking.html">Booking</a>
+							<a class="nav-link" href="lease.html">Booking</a>
 						</li>
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
