--- a/src/main/resources/web/ylt/lease.html
+++ b/src/main/resources/web/ylt/lease.html
@@ -24,8 +24,12 @@
     <!-- web-fonts -->
     <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext"
           rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" />
     <!-- //web-fonts -->
+    <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <!--<script th:src="@{/js/toastr.min.js}"></script>-->
 
     <style>
         .carItem img{
@@ -100,7 +104,7 @@
                         <a class="nav-link" href="services.html">Services</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="booking.html">Booking</a>
+                        <a class="nav-link" href="lease.html">Booking</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -135,9 +139,10 @@
 <section class="bookingform py-5">
     <div class="container-fluid pt-lg-5">
         <div class="col-lg-3 col-sm-6 mb-sm-0 mb-5 footer-grid-agileits-w3ls text-left" style="max-width: 100%">
-            <div class="tech-btm">
+            <div class="tech-btm" style="margin-left: 5%">
                 <h3 class="mb-sm-5 mb-4">选择车型</h3>
                 <div class="btn-group" role="group" aria-label="Basic example">
+                    <button type="button" class="btn btn-secondary" onclick="loadCarItem('')">全部</button>
                     <button type="button" class="btn btn-secondary" onclick="loadCarItem('轿车')">轿车</button>
                     <button type="button" class="btn btn-secondary" onclick="loadCarItem('SUV')">SUV</button>
                     <button type="button" class="btn btn-secondary" onclick="loadCarItem('MPV')">MPV</button>
@@ -484,7 +489,6 @@
     </div>
 </div>
 
-<script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script> <!-- Necessary-JavaScript-File-For-Bootstrap -->
 <script type="text/javascript" th:src="@{/js/wickedpicker.js}"></script>
 <script type="text/javascript">
@@ -568,6 +572,9 @@
         }
         loadCarItem();
     });
+    $("#sub").on("click",function(){
+        login();
+    });
     function loadCarItem(type){
         $.ajax({
             url:[[@{/unverify/getVehicleInfo}]],
@@ -583,12 +590,43 @@
                         var carModelItem = '<div class="blog-grids row mb-3 carItem"><div class="col-1"></div><div class="col-3 pr-0 blog-grid-left"><img src="'+imgSrc+'" alt="" class="img-fluid"></div><div class="col-3 blog-grid-right" style="margin-top:3%"><h2><span>'+
                             item.brand+item.model+'</span></h2><div class="sub-meta"><h3><span><i class="far fa-id-card"></i>'+
                             item.exhaust+'厢|'+item.type+'|'+item.cubicles+'|乘坐'+item.seatNum+'人</span></h3></div></div><div class="col-1 blog-grid-right" style="margin-top:3%"><h2><span style="color:#fabe00">￥'+
-                            item.rent+'</span></h2><h4><span>/日均</span></h4></div><div class="col-4" style="margin-top:4%"><button type="button" class="btn btn-warning" style="width:20%;height:50px"><span style="color:#fff;font-weight:700">租车</span></button></div></div>';
+                            item.rent+'</span></h2><h4><span>/日均</span></h4></div><div class="col-4" style="margin-top:4%"><button onclick="lease(\''+item.id+'\')" type="button" class="btn btn-warning" style="width:20%;height:50px"><span style="color:#fff;font-weight:700">租车</span></button></div></div>';
                         $("#carModelItem").append(carModelItem);
                     }
                 }
             }
         });
+    }
+    function lease(id){
+        var account = [[${account}]];
+        if(!account){
+            toastr.warning("请先登录");
+            return;
+        }
+        toastr.warning(id);
+    }
+    function login(){
+        var username = $("#username").val();
+        var password = $("#password").val();
+        var empPattern = /^\s*$/;
+        if (empPattern.test(username) || empPattern.test(password)){
+            toastr.warning("用户名或密码不能为空");
+            return;
+        }
+        password = encode64(password);
+        $.ajax({
+            url:[[@{/login}]],
+            data:{"username":username,"password":password, "type":"2"},
+            type:"post",
+                dataType:"json",
+                success:function(result){
+                if(result.success){
+                    window.location.reload();
+                }else{
+                    toastr.warning(result.msg);
+                }
+            }
+        })
     }
     /*]]>*/
 </script>
