--- a/src/main/resources/web/ylt/lease.html
+++ b/src/main/resources/web/ylt/lease.html
@@ -25,16 +25,23 @@
     <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&amp;subset=latin-ext"
           rel="stylesheet">
     <link th:href="@{/css/toastr.min.css}" rel="stylesheet" />
-    <link th:href="@{/css/ladda-theme.css}" rel="stylesheet"/>
+    <link th:href="@{/css/ladda-theme.scss}" rel="stylesheet"/>
     <link th:href="@{/css/bootstrapValidator.min.css}" rel="stylesheet"/>
-    <!-- //web-fonts -->
+    <link th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet"/>
+    <link th:href="@{/css/city-picker.css}" rel="stylesheet" type="text/css" />
+
     <script type="text/javascript" th:src="@{/js/jquery-2.1.4.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/encode64.js}"></script>
-    <script th:src="@{/js/toastr.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/toastr.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/ladda.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/spin.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrapValidator.js}"></script>
     <script type="text/javascript" th:src="@{/js/zh_CN.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.zh-CN.js}"></script>
+    <script type="text/javascript" th:src="@{/js/city-picker.data.js}"></script>
+    <script type="text/javascript" th:src="@{/js/city-picker.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main.js}"></script>
 
     <style>
         .carItem img{
@@ -42,6 +49,12 @@
         }
         .carItem div div{
             border-bottom: 2px solid #bbb;
+        }
+        .city-picker-span {
+            border: 1px solid #646464;
+            background-color: #2A2A2A;
+            border-radius: 0.25rem;
+            width:100%;
         }
     </style>
 
@@ -361,7 +374,7 @@
 <div class="modal fade" id="leasePanel" tabindex="-1" role="dialog" aria-labelledby="leaseModel" aria-hidden="true">
     <div class="row">
         <div class="col-lg-6 book-appointment p-sm-5 py-5 px-4">
-            <h2>Personal Details</h2>
+            <h2>取车</h2>
             <div class="book-agileinfo-form">
                 <form action="#" method="post">
                     <div class="row main-agile-sectns">
@@ -376,26 +389,19 @@
                         <div class="col-md-6 agileits-btm-spc form-text1">
                             <input type="email" name="email" placeholder="Email" required="">
                         </div>
-                        <div class="col-md-6">
-                            <div class="agileits-btm-spc">
-                                <select id="cab" onchange="change_country(this.value)"
-                                        class="frm-field required sect">
-                                    <option value="">Select Cab</option>
-                                    <option value="">Mini</option>
-                                    <option value="">Sedan</option>
-                                    <option value="">Elite</option>
-                                </select>
-                            </div>
+                        <div class="col-md-6 agileits-btm-spc form-text1">
+                            <input id="city-picker0" class="form-control" readonly type="text" data-toggle="city-picker">
+                            <!--<div class="form-group">
+                                <button class="btn btn-warning" id="reset" type="button">重置</button>
+                                <button class="btn btn-danger" id="destroy" type="button">确定</button>
+                            </div>-->
                         </div>
                     </div>
                     <div class="clear"></div>
-                    <h2 class="sub-head-w3ls">Booking Details</h2>
+                    <h2 class="sub-head-w3ls">还车</h2>
                     <div class="row main-agile-sectns">
                         <div class="col-md-6 agileits-btm-spc form-text1">
-                            <input id="datepicker" name="Text" type="text" placeholder="Pick-up Date" value=""
-                                   onfocus="this.value = '';"
-                                   onblur="if (this.value == '') {this.value = 'mm/dd/yyyy';}"
-                                   required="">
+                            <input type="text" value="2012-05-15 21:05" id="datetimepicker" data-date-format="yyyy-mm-dd hh:ii">
                         </div>
                         <div class="col-md-6 agileits-btm-spc form-text2">
                             <input type="text" id="timepicker" name="Time" class="timepicker form-control"
@@ -436,10 +442,7 @@
                 </form>
             </div>
         </div>
-        <div class="col-lg-6 mt-md-5">
-            <img th:src="@{/images/car1.png}" alt="" class="img-fluid"/>
-            <img th:src="@{/images/car2.png}" alt="" class="img-fluid"/>
-        </div>
+        <div id="imgDesc" class="col-lg-6 mt-md-5"></div>
     </div>
 </div>
 <div class="modal fade" id="registeredPanel" tabindex="-1" role="dialog" aria-labelledby="regModel" aria-hidden="true">
@@ -615,6 +618,12 @@
     $("#regSub").on("click",function(){
         registered();
     });
+    $('#datetimepicker').datetimepicker(
+        {
+            language: 'zh-CN',
+            autoclose: true
+        }
+    );
 
     function registered(){
         var bootstrapValidator = $("#registeredForm").data('bootstrapValidator').isValid();
@@ -664,15 +673,18 @@
                         var carModelItem = '<div class="blog-grids row mb-3 carItem"><div class="col-1"></div><div class="col-3 pr-0 blog-grid-left"><img src="'+imgSrc+'" alt="" class="img-fluid"></div><div class="col-3 blog-grid-right" style="margin-top:3%"><h2><span>'+
                             item.brand+item.model+'</span></h2><div class="sub-meta"><h3><span><i class="far fa-id-card"></i>'+
                             item.exhaust+'厢|'+item.type+'|'+item.cubicles+'|乘坐'+item.seatNum+'人</span></h3></div></div><div class="col-1 blog-grid-right" style="margin-top:3%"><h2><span style="color:#fabe00">￥'+
-                            item.rent+'</span></h2><h4><span>/日均</span></h4></div><div class="col-4" style="margin-top:4%"><button onclick="lease(\''+item.id+'\')" type="button" class="btn btn-warning" style="width:20%;height:50px"><span style="color:#fff;font-weight:700">租车</span></button></div></div>';
+                            item.rent+'</span></h2><h4><span>/日均</span></h4></div><div class="col-4" style="margin-top:4%"><button onclick="lease(\''+item.id+'\',\''+imgSrc+'\')" type="button" class="btn btn-warning" style="width:20%;height:50px"><span style="color:#fff;font-weight:700">租车</span></button></div></div>';
                         $("#carModelItem").append(carModelItem);
                     }
                 }
             }
         });
     }
-    function lease(id){
+    function lease(id,imgSrc){
         var account = [[${account}]];
+        $("#imgDesc").empty();
+        $("#imgDesc").append('<img src="'+imgSrc+'" alt="" class="img-fluid">');
+        $("#leasePanel").modal('show');
         if(!account){
             toastr.warning("请先登录");
             return;
